<resources>
    <string name="app_name">UntilChecked</string>
    <string name="table_class">课表</string>
    <string name="app_main_page">首页</string>
    <string name="app_mine">我的</string>
    <string name="app_check">考勤</string>
    <string name="app_home">主页</string>
    <string name="app_login">登录</string>
    <string name="app_account">账号</string>
    <string name="app_pwd">密码</string>
    <string name="app_forget_pwd">忘记密码</string>
    <string name="app_stu">学生</string>
    <string name="app_tea">老师</string>
</resources>
