<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#EAEAEA"
    android:layout_height="match_parent">

    <com.cxyz.commons.widget.TitleView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_width="136dp"
        android:layout_height="125dp"
        android:src="@mipmap/common_pxxy"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:weightSum="1">

        <TextView
            android:text="@string/app_account"
            android:layout_width="match_parent"
            android:textSize="18dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/app_white"
            android:maxLength="20"
            android:id="@+id/et_id" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:weightSum="1">

        <TextView
            android:text="@string/app_pwd"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:textSize="18dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/app_white"
            android:id="@+id/et_pwd" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <RadioGroup
            android:id="@+id/rg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            >
            <RadioButton
                android:id="@+id/rb_stu"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_stu"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/rb_tea"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/app_tea"/>
        </RadioGroup>

        <Button
            android:layout_marginTop="30dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:text="@string/app_login"
            android:textColor="@color/app_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:background="@drawable/button_shape"/>

        <TextView
            android:text="@string/app_forget_pwd"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forgetpwd"
            android:layout_weight="0.15" />
    </LinearLayout>
</LinearLayout>
